exam/pod-definition.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: ubuntu-pod
  name: ubuntu-pod
spec:
  containers:
  - image: ubuntu:latest
    name: ubuntu-pod
    # imagePullPolicy: Never
    imagePullPolicy: Always
    command:
    - "sleep"
    - "3600"
